CronJob-EveryMinute.yaml

# Vi du ve trien khai Job, chay theo schedule, o day la 1 minute / 1 lan trigger
# Ta dat Job nay nam trong namespace: test-job
apiVersion: v1
kind: Namespace
metadata:
  name: test-cronjob
