01.logging.yaml

# DaemonSet danh cho logging management
apiVersion: v1
kind: Namespace
metadata:
  name: logging-fluent-bit-spl
---

apiVersion: apps/v1
kind: DaemonSet

metadata:
  name: fluent-bit
  namespace: logging-fluent-bit-spl

spec:
  selector:
    matchLabels:
      app: fluent-bit

  template:
    metadata:
      labels:
        app: fluent-bit

    spec:
      containers:
        - name: fluent-bit
          image: fluent/fluent-bit:3.0

          volumeMounts:
            - name: varlog
              mountPath: /var/log

      volumes:
        - name: varlog
          hostPath:
            path: /var/log
