02.node-exporter.yaml

# DaemonSet danh cho monitoring system node

apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---

apiVersion: apps/v1
kind: DaemonSet

metadata:
  name: node-exporter
  namespace: monitoring

spec:
  selector:
    matchLabels:
      app: node-exporter

  template:
    metadata:
      labels:
        app: node-exporter

    spec:
      hostNetwork: true

      containers:
        - name: exporter
          image: prom/node-exporter:v1.8.1

          ports:
            - containerPort: 9100
