02.Deployment.yaml

# Deployment trien khai moi khi Job-RunFirst da chay xong

apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: test-job-then-deployment
spec:
  replicas: 10

  selector:
    matchLabels:
      app: demo-app

  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app
          image: nginx:1.27-alpine

          ports:
            - name: http
              containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: test-job-then-deployment
spec:
  selector:
    app: demo-app

  ports:
    - name: http
      port: 80
      targetPort: http
