02.MySQL-2Replicas.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mysql
---
# Headless Service dùng cho stable DNS của StatefulSet
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
  namespace: mysql
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: mysql
spec:
  serviceName: mysql-headless
  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      terminationGracePeriodSeconds: 30

      containers:
        - name: mysql
          image: mysql:8.4

          ports:
            - name: mysql
              containerPort: 3306

          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -uroot -p"${MYSQL_ROOT_PASSWORD}"
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -uroot -p"${MYSQL_ROOT_PASSWORD}"
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 2Gi

  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-path
        resources:
          requests:
            storage: 20Gi
---
# Service nội bộ chỉ trỏ vào mysql-0
apiVersion: v1
kind: Service
metadata:
  name: mysql-primary
  namespace: mysql
spec:
  type: ClusterIP
  selector:
    app: mysql
    statefulset.kubernetes.io/pod-name: mysql-0
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
---
# Service external chỉ trỏ vào mysql-0
apiVersion: v1
kind: Service
metadata:
  name: mysql-primary-nodeport
  namespace: mysql
spec:
  type: NodePort
  selector:
    app: mysql
    statefulset.kubernetes.io/pod-name: mysql-0
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
      nodePort: 30306
---
# Service riêng cho mysql-1, chỉ dùng nội bộ
apiVersion: v1
kind: Service
metadata:
  name: mysql-secondary
  namespace: mysql
spec:
  type: ClusterIP
  selector:
    app: mysql
    statefulset.kubernetes.io/pod-name: mysql-1
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
