deployment-book-sub-service-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # tên của deployment
  name: s2s-book-sub-service-1-deployment
spec:
  # số POD tạo ra
  replicas: 15

  # thiết lập các POD do deploy quản lý, là POD có nhãn  "app=s2s-book-sub-service-1"
  selector:
    matchLabels:
      app: s2s-book-sub-service-1

  # Định nghĩa mẫu POD, khi cần Deploy sử dụng mẫu này để tạo Pod
  template:
    metadata:
      name: s2s-book-sub-service-1-tmpl
      labels:
        app: s2s-book-sub-service-1
    spec:
      containers:
      - name: s2s-book-sub-service-1-container
        image: tdchien1982/k8s:service_to_service-book.sub.01
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
          - containerPort: 9241
---
apiVersion: v1
kind: Service
metadata:
  name: s2s-book-sub-service-1
spec:
  selector:
     app: s2s-book-sub-service-1
  type: ClusterIP
  ports:
    - name: config-port-9241
      port: 9241 # Port của Service định nghĩa ra
      targetPort: 9241 # Port trên các PODS
