deploy-2-public-services-kong-gateway.yaml
# Deployment for 2 public services
# (Using Kong Ingress Controller instead Traefik Ingress Controller)

####################################
# Service 01: nginx
####################################
apiVersion: apps/v1
kind: Deployment
metadata:
  # tên của deployment
  name: service1-kong-deployment
spec:
  # số POD tạo ra
  replicas: 3

  # thiết lập các POD do deploy quản lý, là POD có nhãn  "app=service-1-kong"
  selector:
    matchLabels:
      app: service-1-kong

  # Định nghĩa mẫu POD, khi cần Deploy sử dụng mẫu này để tạo Pod
  template:
    metadata:
      name: service1-kong-pod-tmpl
      labels:
        app: service-1-kong
    spec:
      containers:
      - name: service1-kong-container
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: s2s-service1-kong
spec:
  selector:
    app: service-1-kong
  type: ClusterIP
  ports:
    - name: config-port-service1-kong
      port: 5200 # Port của Service định nghĩa ra
      targetPort: 80 # Port trên các PODS


---
####################################
# Service 02: angular
####################################
apiVersion: apps/v1
kind: Deployment
metadata:
  # tên của deployment
  name: service2-kong-deployment
spec:
  # số POD tạo ra
  replicas: 2

  # thiết lập các POD do deploy quản lý, là POD có nhãn  "app=service-2-kong"
  selector:
    matchLabels:
      app: service-2-kong

  # Định nghĩa mẫu POD, khi cần Deploy sử dụng mẫu này để tạo Pod
  template:
    metadata:
      name: service2-kong-pod-ty6684433
      labels:
        app: service-2-kong
    spec:
      containers:
        - name: service2-kong-container
          image: tdchien1982/angular:10.build-docker-nginx
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: s2s-service2-kong
spec:
  selector:
    app: service-2-kong
  type: ClusterIP
  ports:
    - name: config-port-service2-kong
      port: 6200 # Port của Service định nghĩa ra
      targetPort: 80 # Port trên các PODS


#################################################
# Kong Ingress
# Config Ingress để routing HTTP Request dựa theo domain name để forward vào `service-1-kong` hoặc `service-2-kong`
#
# k8s-service1.tdc.vv -> s2s-service1:5200
# k8s-service2.tdc.vv -> s2s-service2:6200
#################################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: two-public-services-kong-ingress-controller

  annotations:
    # Keep original path when forwarding to upstream service
    konghq.com/strip-path: "false"

spec:

  ingressClassName: kong

  rules:
    # =========================================================
    # Service 01
    # =========================================================
    - host: k8s-service1-kong.tdc.vv

      http:
        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: s2s-service1

                port:
                  number: 5200


    # =========================================================
    # Service 02
    # =========================================================
    - host: k8s-service2-kong.tdc.vv

      http:
        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: s2s-service2

                port:
                  number: 6200
