deploy-dev-namespace+Ingress.yaml
# Deployment for 2 public services (Dev Env)

###############################################################
# Tạo namespace cho môi trường Dev
###############################################################
kind: Namespace
apiVersion: v1
metadata:
  name: dev-custom-ns
  labels:
    name: dev-custom-ns
---

#################################################
# Config Ingress để routing HTTP Request dựa theo domain name để forward vào `main-service` thuộc namespace khác nhau (dev/stg)
#################################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-public-services-http
  namespace: dev-custom-ns
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rewrite-target: / # set path to result request
spec:
  rules:
    - host: dev.chien.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-service
                port:
                  number: 5270     # Service giao tiếp qua port 5270
