deploy-nginx-hello-world.yaml
# Deployment for tdchien1982/angular:10.build-docker-nginx

apiVersion: apps/v1
kind: Deployment
metadata:
  # tên của deployment
  name: nginx-hello-world-deployment
spec:
  # số POD tạo ra
  replicas: 50

  # thiết lập các POD do deploy quản lý, là POD có nhãn  "app=main-service-hello-world"
  selector:
    matchLabels:
      app: main-service-hello-world

  # Định nghĩa mẫu POD, khi cần Deploy sử dụng mẫu này để tạo Pod
  template:
    metadata:
      name: nginx-pod-tmpl
      labels:
        app: main-service-hello-world
    spec:
      containers:
      - name: nginx-container
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: s2s-nginx
spec:
  selector:
    app: main-service-hello-world
  type: ClusterIP
  ports:
    - name: config-port-nginx
      port: 5100 # Port của Service định nghĩa ra
      targetPort: 80 # Port trên các PODS
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-s2s-nginx
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
   - http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: s2s-nginx
             port:
               number: 5100 # Service giao tiếp qua port 5100
