deploy-show-all-envs.yaml
# Deployment for tdchien1982/angular:10.build-docker-nginx

apiVersion: apps/v1
kind: Deployment
metadata:
  # tên của deployment
  name: show-all-envs-deployment
spec:
  # số POD tạo ra
  replicas: 1

  # thiết lập các POD do deploy quản lý, là POD có nhãn  "app=main-service"
  selector:
    matchLabels:
      app: main-service

  # Định nghĩa mẫu POD, khi cần Deploy sử dụng mẫu này để tạo Pod
  template:
    metadata:
      name: show-env-pod-tmpl
      labels:
        app: main-service
    spec:
      containers:
      - name: show-env-container
        image: tdchien1982/k8s:show-all-envs-v1
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
          - containerPort: 9234
---
apiVersion: v1
kind: Service
metadata:
  name: s2s-show-env
spec:
  selector:
    app: main-service
  type: ClusterIP
  ports:
    - name: config-port-show-env
      port: 5130 # Port của Service định nghĩa ra
      targetPort: 9234 # Port trên các PODS
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-s2s-show-env
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
   - http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: s2s-show-env
             port:
               number: 5130 # Service giao tiếp qua port 5130
