deploy-use-secrets.yaml

#############################################################################
# Định nghĩa PODs có sử dụng các biến môi trường được config từ Secrets
#############################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  # tên của deployment
  name: use-secrets-deployment
spec:
  # số POD tạo ra
  replicas: 1

  # thiết lập các POD do deploy quản lý, là POD có nhãn  "app=main-service"
  selector:
    matchLabels:
      app: main-service

  # Định nghĩa mẫu POD, khi cần Deploy sử dụng mẫu này để tạo Pod
  template:
    metadata:
      name: use-secrets-pod-tmpl
      labels:
        app: main-service
    spec:
      volumes:
        - name: secret-volume
          secret:
            secretName: my-secret
            items:
              - key: "secret.txt"
                path: "secret.txt"
              - key: "server.crt"
                path: "server.crt"

      containers:
      - name: use-secrets-container
        image: tdchien1982/k8s:use-secrets-v1
        imagePullPolicy: Always

        volumeMounts:
          - name: secret-volume
            mountPath: "/app/storage/secret.txt"
            subPath: secret.txt
            readOnly: true

          - name: secret-volume
            mountPath: "/app/storage/server.crt"
            subPath: server.crt
            readOnly: true


        # Refer các biến môi trường lấy từ Secrets
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
          - containerPort: 9266

##############################################
# Định nghĩa Service để tạo traffic cho Pods
##############################################
---
apiVersion: v1
kind: Service
metadata:
  name: s2s-use-secrets
spec:
  selector:
    app: main-service
  type: ClusterIP
  ports:
    - name: config-port-use-config-map
      port: 5160 # Port của Service định nghĩa ra
      targetPort: 9266 # Port trên các PODS

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-s2s-use-secrets
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
   - http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: s2s-use-secrets
             port:
               number: 5160 # Service giao tiếp qua port 5160
